CMBSandbox4/src/objects/Replace_words_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Setting Used to save task type where we have to replace strings</description>
    <fields>
        <fullName>Replacement__c</fullName>
        <label>Replacement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String__c</fullName>
        <label>String</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Replace words Setting</label>
</CustomObject>